# cris

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app.py  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
agents/: __init__.py  geo_intel_agent.py  link_agent.py  orchestrator.py  osint_agent.py  predictor_agent.py  profiler_agent.py  witness_agent.py
config/: __init__.py  model_config.py  models.yml  prompts.py  settings.py
core/: __init__.py  a2a_server.py  adk_agent.py  base_agent.py  base_graph_db.py  base_llm_provider.py  base_processor.py  base_vector_store.py  multi_provider_agent.py  plugin_loader.py  registry.py
data/sample_cases/: case_001.json  case_002.json  case_003.json  case_004.json  case_005.json  case_006.json  case_007.json  case_008.json  case_009.json  case_010.json
database/: __init__.py  init_schema.py  neo4j_client.py  vector_store.py
database/schemas/: __init__.py  graph_schema.py
docs/: GEMINI3_ADK_A2A_ARCHITECTURE.md  architecture.md  configuration.md  getting-started.md  index.md
docs/agents/: creating-agents.md  overview.md
docs/api/: models.md
docs/plugins/: overview.md
models/: __init__.py  case.py  evidence.py  person.py  prediction.py
plugins/: README.md  __init__.py
plugins/example_agent/: __init__.py  custom_agent.py
processors/: __init__.py  document_processor.py  entity_extractor.py  timeline_builder.py
services/: __init__.py  embedding_service.py  geocoding_service.py  llm_service.py
services/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
tests/: __init__.py  conftest.py
ui/: __init__.py
ui/components/: __init__.py  case_uploader.py  chat_interface.py  graph_viewer.py  map_viewer.py
ui/pages/: __init__.py  analysis.py  cases.py  dashboard.py  graph_explorer.py  predictions.py
utils/: __init__.py  formatters.py  logger.py
